MIGRATE: ProductVariant
