# app/Models/OrderItem.php
@@ -9,14 +9,12 @@ class OrderItem extends Model
     protected $fillable = [
         'order_id',
         'product_id',
+        'product_variant_id',
+        'product_name',
+        'product_variant_name',
         'quantity',
         'price',
         'totalMoney',
-        'options'
-    ];
-
-    protected $casts = [
-        'options' => 'array',
     ];
 
     public function order()
@@ -27,6 +25,11 @@ class OrderItem extends Model
     public function product()
     {
         return $this->belongsTo(Product::class);
+    }
+
+    public function productVariant()
+    {
+        return $this->belongsTo(ProductVariant::class);
     }
 
     public function review()
